polish some of the blanket to-dos in Ch 5

--- a/main.bib
+++ b/main.bib
@@ -103,6 +103,23 @@ MRREVIEWER = {P. S. Landweber},
        URL = {http://dx.doi.org/10.1215/S0012-7094-95-07911-3},
 }
 
+@article {AFG,
+    AUTHOR = {Ando, Matthew and French, Christopher P. and Ganter, Nora},
+     TITLE = {The {J}acobi orientation and the two-variable elliptic genus},
+   JOURNAL = {Algebr. Geom. Topol.},
+  FJOURNAL = {Algebraic \& Geometric Topology},
+    VOLUME = {8},
+      YEAR = {2008},
+    NUMBER = {1},
+     PAGES = {493--539},
+      ISSN = {1472-2747},
+   MRCLASS = {55N34 (11F23 11F50 58J26)},
+  MRNUMBER = {2443236},
+MRREVIEWER = {Mark Hovey},
+       DOI = {10.2140/agt.2008.8.493},
+       URL = {http://dx.doi.org/10.2140/agt.2008.8.493},
+}
+
 @ARTICLE{AHR,
   author = {Ando, Matthew and Hopkins, Michael J. and Rezk, Charles},
   title = {Multiplicative orientations of $KO$--theory and the spectrum of topological modular forms},
@@ -947,6 +964,25 @@ MRREVIEWER = {R. E. Stong},
    MRCLASS = {14G10 (10G20 12G05 14L05)},
   MRNUMBER = {633662},
 MRREVIEWER = {Thomas Zink},
+}
+
+@article {KitchlooLaures,
+    AUTHOR = {Kitchloo, Nitu and Laures, Gerd},
+     TITLE = {Real structures and {M}orava {$K$}-theories},
+   JOURNAL = {$K$-Theory},
+  FJOURNAL = {$K$-Theory. An Interdisciplinary Journal for the Development,
+              Application, and Influence of $K$-Theory in the Mathematical
+              Sciences},
+    VOLUME = {25},
+      YEAR = {2002},
+    NUMBER = {3},
+     PAGES = {201--214},
+      ISSN = {0920-3036},
+   MRCLASS = {55N22 (19L64 55N34)},
+  MRNUMBER = {1909866},
+MRREVIEWER = {W. Stephen Wilson},
+       DOI = {10.1023/A:1015683917463},
+       URL = {http://dx.doi.org/10.1023/A:1015683917463},
 }
 
 @article {KLW,
