--- a/sigma.tex
+++ b/sigma.tex
@@ -1287,6 +1287,10 @@ where $G_{2k}$ is the $2k${\th} Eisenstein series.  Noting that $G_2$ is \emph{n
 Another location where this series $\psi$ appears is in the theory of Tate $p$--divisible groups of Ando and Morava (and, in some sense, in the sense of Katz and Mazur).  For a formal group $\G$ over $\Spf R$ with group law $+_\phi$, they consider the Weierstrass product \[\Theta_{\phi}(x; q) = x \cdot \prod_{\substack{k \in \Z \\ k \ne 0}} \frac{(x +_\phi [k]_\phi(q))}{[k]_\phi(q)} \in R\ps{x,q},\] which plays the role of a kind of $\theta$--function for $\G$.  They also connect this series the quotient function mapping to the group scheme $\G / q^{\Z}$ (in the sense of \todo{CITE ME OUT OF CHAPTER 6}), which they further identify as the universal extension of $\G$ by a constant $p$--divisible group of dimension $1$.  In the presense of a global object $\mathbb G$ specializing to $\G$ (as in the case of $\G_a$ or $\G_m$), they show how to modify this product to an analytically convergent power series, recovering the characteristic series for the $\widehat A$--genus and the $L$--genus.  The higher height analogues of these results seem very mysterious and very interesting.
 \end{remark}
 
+\begin{remark}[{\cite{AFG}}]
+Ando, French, and Ganter have given a construction that convert $MU[2k, \infty)$--orientations of a spectrum $E$ to $MU[2(k-1), \infty)$--orientations of the pro-spectrum $E^{\CP^\infty_{-\infty}}$.  Performing this operation to the $\sigma$--orientation of $K^{\Tate}$ gives the ``two--variable Jacobi genus'', which assigns $SU$--manifolds to certain classes in $\pi_0 (K^{\Tate})^{\CP^\infty_{-\infty}} = \Z\ps{q}(\!(y)\!)$ connected to meromorphic Jacobi forms.
+\end{remark}
+
 
 
 
@@ -1301,7 +1305,7 @@ Another location where this series $\psi$ appears is in the theory of Tate $p$--
 
 \section{Chromatic \texorpdfstring{$\Spin$}{Spin} and \texorpdfstring{$\String$}{String} orientations}
 
-We now turn to understanding $M\String$--orientations in turns of $MU[6, \infty)$--orientations.  We will approach this in successive passes, keeping the desired picture sharp the entire time but introducing generality slowly.  Unfortunately, most of the original source material~\cite{HAS,StricklandFSKS} for this has not been published, and hence it is difficult to give references.  We have gone to some lengths to prepare the reader for the sorts of arguments that appear here: they are not so different from the arguments appearing elsewhere in this chapter.
+We now turn to understanding $M\String$--orientations in turns of $MU[6, \infty)$--orientations.  We will approach this in successive passes, keeping the desired picture sharp the entire time but introducing generality slowly.  Unfortunately, most of the original source material~\cite{HAS,StricklandFSKS} for this has not been published, and hence it is difficult to give references.\footnote{Versions of some of this have appeared in work of Kitchloo and Laures~\cite{KitchlooLaures}.}  We have gone to some lengths to prepare the reader for the sorts of arguments that appear here: they are not so different from the arguments appearing elsewhere in this chapter.
 
 We begin at the maximally simple situation, where $2$ is inverted.  In this case, the Wood cofiber sequence \[\Susp kO \xrightarrow{\eta} kO \xrightarrow{c} kU \xrightarrow{\lambda} \Susp^2 kO\] becomes split, since $\eta$ is a $2$--torsion element.  By considering different underlying infinite-loopspaces, this gives a number of identifications:
 \begin{center}
@@ -1623,32 +1627,10 @@ A the cohomology formal schemes of a number of other infinite loopspaces related
 
 
 
-remark: Compare with Neil's response at \texttt{http://mathoverflow.net/questions/123958/a-formal-group-law-over-oriented-bordism}.
-
-
-
-
-
-
-\todo{Cite Kitchloo--Laures's ``Real structures and Morava $K$--theories''}
-
+\todo{remark: Compare with Neil's response at \texttt{http://mathoverflow.net/questions/123958/a-formal-group-law-over-oriented-bordism}.}
 \todo{If you managed to get all this to work, you could try to understand the $M\Spin$--orientation of $K_{\Tate}$, as in page 628 of the published AHS.}
-
-
-
-
-
-
-
-
-
-\subsection*{Some other things that might belong in this chapter}
-
-There's also the work of Ando--French--Ganter on factorized / iterated $\Theta$ structures and how they give rise to the ``two--variable Jacobi genus''.
-
-FPFP Example 12.10 claims applications to $BU[2k, \infty)$, but I can't tell what they are.
-
-Mention all this work of Gerd.  He has a bunch of papers that are all clustered around these topics.
+\todo{FPFP Example 12.10 claims applications to $BU[2k, \infty)$, but I can't tell what they are.}
+\todo{Mention all this work of Gerd.  He has a bunch of papers that are all clustered around these topics.}
 
 
 
