collapse 5.5 and 5.6 into one

--- a/sigma.tex
+++ b/sigma.tex
@@ -906,7 +906,7 @@ Lastly, one checks that this basis gives us access to the desired collection of 
 
 
 
-\section{Elliptic curves and \texorpdfstring{$\theta$}{theta}--functions}\label{SectionEllipticCurvesAndThetaFunctions}
+\section{Elliptic curves, \texorpdfstring{$\theta$}{theta}--functions, and \texorpdfstring{$MU[6, \infty)$}{MU[6, oo)}--manifolds}\label{SectionEllipticCurvesAndThetaFunctions}
 
 The goal of this Lecture is to give the briefest possible summary of the theory of elliptic curves that covers the topics necessary to us in the coming sections.  Accordingly, we won't cover many topics that a sane introduction to elliptic curves would make a point to cover, and---perhaps worse---we will hardly prove anything.  We will, however, discover a place where ``$C_3 \G$'' appears internally to the theory of elliptic curves, and I hope nonetheless that this will give the arithmetically disinclined reader a foothold on the ``elliptic'' part of ``elliptic cohomology''.
 
@@ -1145,19 +1145,6 @@ This function $e_{p^j}$ is called the \textit{($p^j$){\th} Weil pairing}.
 \begin{remark}
 In the case that $A$ is an elliptic curve, this agrees with the usual definition of its ``Weil pairing''.  In the case of a \emph{complex} elliptic curve $\C / (1, \tau)$, this degenerates further to the assignment \[\left( \frac{a}{n}, \frac{b}{n} \tau \right) \mapsto \exp\left(-2\pi i \frac{ab}{n}\right).\]
 \end{remark}
-
-
-
-
-
-
-
-
-
-
-
-
-\section{Modular forms from \texorpdfstring{$MU[6, \infty)$}{MU[6, oo)}--manifolds}
 
 We now actually leverage the arithmetic geometry in \Cref{Theta3IsTrivial} by placing ourselves in a situation where algebraic topology is directly linked to abelian varieties.
 
