tobi’s observation about the infinite product of K(n)s

--- a/finite.tex
+++ b/finite.tex
@@ -1341,6 +1341,7 @@ In the broader literature, the phrase ``Greek letter elements'' typically refers
 \todo{Another fun fact is that because $p$--local finite spectra $F$ are $\bigvee_{d < \infty} K(d)$--local, there are no nontrivial maps $H\F_p \to F$ (and, in particular, the Spanier--Whitehead dual of $H\F_p$ is null).  (In fact, the Hovey paper \textit{Bousfield Localization Functors and Hopkins' Chromatic Splitting Conjecture} shows that they are local for any properly infinite collection of Morava $K$--theories.)}
 \todo{Danny was asking some interesting questions about the relationships between the $t_i$ and the $h_j$ elements of the Adams spectral sequence.  You could try to explain some of this comparison and how you get the Hopf invariant one theorem out of it.}
 \todo{Danny was also asking about the role of the $T(j)$ spectra, which are pretty cool.  They (and their utility as described in \textit{From Spectra to Stacks}) might live in a Remark somewhere.}
+\todo{Tobi had a cute argument: the cofiber of $\bigvee_n K(n) \to \prod_n K(n)$ is concentrated in degree $0$ (hence Eilenberg--Mac Lane) because each nonzero homotopy degree receives contributions from only finitely many $K(n)$ spectra.  I'm not sure what this is good for, but it's a neat fact.  (It's important to work with the minimally periodic spectra here.)}
 
 
 
